# CodexBarWin

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.workbuddy/memory/: 2026-04-01.md  2026-04-02.md
src/: App.css  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  models.rs  tray.rs
src-tauri/src/providers/: claude.rs  copilot.rs  cursor.rs  dashscope.rs  kimicode.rs  mod.rs  openai.rs  openrouter.rs  zhipu.rs
src/components/: KimiCard.css  KimiCard.tsx  ProviderCard.css  ProviderCard.tsx  SettingsPanel.css  SettingsPanel.tsx  ZhipuCard.css  ZhipuCard.tsx
src/hooks/: useUsageData.ts
